# cellurar3d

./: .gitignore  CMakeLists.txt  README.md
include/: cube.h  include.h  range.h  rules.h  spherical.h
sources/: functions.cpp  main.cpp
